tests/errors/polymorphic_list_ref.eff
let r = ref [] in
let q = r in
  q#update ["foo"] ;
  r#update (5 :: r#lookup ()) ;
  r#lookup () ;;

